Second fix for images on mobile

--- a/css/index.css
+++ b/css/index.css
@@ -31,6 +31,10 @@
     padding: 5px;
 }
 
+.image-mobile {
+    width: 300px;
+}
+
 .block {
     margin-top: 20px;
     border-top: 1px solid lightgrey;
